# fSort

./: CMakeLists.txt  LICENSE  README.md
include/: DirectoryManager.hpp  File.hpp  FileSorter.hpp  FileTypeClassifier.hpp  FileWatcher.hpp  Utils.hpp
src/: DirectoryManager.cpp  File.cpp  FileSorter.cpp  FileTypeClassifier.cpp  FileWatcher.cpp  Utils.cpp  main.cpp
